fix: changed background color for dark mode

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -11,7 +11,7 @@
   z-index: -1;
 }
 
-.dark-mode { background: #16161A; }
+.dark-mode { background: #161e2e; }
 
 /** Svg elements */
 .circle-pink::before {
